[gd_scene load_steps=9 format=3 uid="uid://b86cefs68mmae"]

[ext_resource type="Script" path="res://UI/Scripts/choix_ennemis.gd" id="1_x3kko"]
[ext_resource type="PackedScene" uid="uid://rcby27lpo007" path="res://UI/Displays/Scenes/affichage_equipe.tscn" id="2_ma482"]
[ext_resource type="Texture2D" uid="uid://bknc5skjp7s4v" path="res://UI/Buttons/retour_base.png" id="3_2m24t"]
[ext_resource type="Texture2D" uid="uid://dd20mihsbd7tw" path="res://UI/Buttons/retour_clicked.png" id="4_qfmv3"]
[ext_resource type="Texture2D" uid="uid://bsx000i85450y" path="res://UI/Buttons/retour_hovered.png" id="5_o81pt"]
[ext_resource type="Texture2D" uid="uid://b5sgblea4yfqw" path="res://UI/Buttons/valider_base.png" id="6_iwg1m"]
[ext_resource type="Texture2D" uid="uid://dtc8mqmtx8ama" path="res://UI/Buttons/valider_clicked.png" id="7_p35ea"]
[ext_resource type="Texture2D" uid="uid://bq7hc0e37pnda" path="res://UI/Buttons/valider_hovered.png" id="8_j2y1k"]

[node name="ChoixEnnemis" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x3kko")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -80.0
offset_top = -73.0
offset_right = 1683.0
offset_bottom = 965.0
scale = Vector2(1, 20)
color = Color(0.529412, 0.478431, 0.317647, 1)

[node name="AffichageEquipe" parent="." instance=ExtResource("2_ma482")]
layout_mode = 1
offset_top = 41.0
offset_bottom = 41.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 380.0
offset_right = 1216.0
offset_bottom = 730.0
scale = Vector2(1.3, 1.3)

[node name="Equipes" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
columns = 99

[node name="BoutonsPrincipaux" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 597.0
offset_top = 845.0
offset_right = 896.0
offset_bottom = 885.0
scale = Vector2(1.5, 1.5)
columns = 2

[node name="Retour" type="TextureButton" parent="BoutonsPrincipaux"]
layout_mode = 2
texture_normal = ExtResource("3_2m24t")
texture_pressed = ExtResource("4_qfmv3")
texture_hover = ExtResource("5_o81pt")

[node name="Valider" type="TextureButton" parent="BoutonsPrincipaux"]
layout_mode = 2
texture_normal = ExtResource("6_iwg1m")
texture_pressed = ExtResource("7_p35ea")
texture_hover = ExtResource("8_j2y1k")

[connection signal="pressed" from="BoutonsPrincipaux/Retour" to="." method="_on_retour_pressed"]
[connection signal="pressed" from="BoutonsPrincipaux/Valider" to="." method="_on_valider_pressed"]
